added salesforce org type dropdown to credentials form

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -50,7 +50,7 @@
                   <%= f.password_field :password_confirmation, class: 'form-control' %>
                 </div>
                 <div class="form-group">
-                  <%= f.label :first_name %>
+                  <%= f.label :firssst_name %>
                   <%= f.text_field :first_name, class: 'form-control' %>
                 </div>
                 <div class="form-group">
