Added angular header; Authentication check via angular;

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,8 @@
   <body>
     <div id="wrap">
       <div id="main">
-        <%= render "shared/header" %>
+        <div header></div>
+        
         <div ng-view>
         </div>
         <div class='growl-wrapper'>
