rebased on develop

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,8 +29,11 @@
   <body>
     <div id="wrap">
       <div id="main">
-        <%= render "shared/header" %>
-        <div ng-view></div>
+        <div header></div>
+        
+        <div ng-view>
+        </div>
+        
         <div class='growl-wrapper'>
           <div growl></div>
         </div>
