--- a/app/assets/stylesheets/marketplace.css.sass
+++ b/app/assets/stylesheets/marketplace.css.sass
@@ -1,3 +1,6 @@
+/* Header
+ ========================================================================== */
+
 .headline-text
   font-weight: 200
 .headline
@@ -46,3 +49,79 @@
   &:hover, &.active
     -webkit-box-shadow: none
     box-shadow: none
+
+/* Accordion
+ ========================================================================== */
+
+$accordion-base:   #cfd0cc
+$accordion-active: #5b6a70
+$accordion-dark:   #354a54
+$accordion-danger: #e8564c
+
+// refactor could be dry-er
+.custom-accord
+  margin-bottom: 5px
+  .panel
+    border-radius: 0
+    box-shadow: 2px 2px 0 0 $accordion-dark
+    .panel-heading
+      background: $accordion-base
+      border-radius: 0
+      text-align: left
+      text-transform: uppercase
+      padding: 0
+      .panel-title
+        font-size: 1em
+        font-weight: bold
+        box-shadow: 2px 2px 0 0 $accordion-dark
+        a
+          &:hover, &:focus
+            text-decoration: none
+      .ng-panel-title
+        padding: 10px 15px
+        transition: all .25s
+        &:hover
+          background: darken($accordion-base, 4%)
+        &.active
+          color: $accent
+          background: $accordion-active
+    .panel-body
+      background: $accordion-active
+      padding: 5px 0
+      border: none !important
+    li
+      cursor: pointer
+      background: $accordion-active
+      font-size: .9em
+      text-align: left
+      color: white
+      border: none
+      transition: all .25s
+      &:hover, &:hover .badge
+        color: $grey
+        background: none
+      &.active
+        color: $accent
+      .badge
+        background: none
+        font-size: .9em
+        font-weight: normal
+        padding: 0
+        transition: all .25s
+        &.active
+          color: $accent
+
+.reset-accordions
+  background: $red-accent
+  color: white
+  padding: 10px 15px
+  text-align: left
+  text-transform: uppercase
+  font-size: 1em
+  font-weight: bold
+  box-shadow: 2px 2px 0 0 $accordion-dark
+  cursor: pointer
+  transition: all .25s
+  &:hover, a:hover
+    color: white
+    background: darken($red-accent, 8%)
