--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -86,7 +86,7 @@
                     </label>
                   </div>
                 </div>
-                <div class="form-group coupon_field" style="display:none">
+                <div class="form-group coupon_field">
                   <%= f.label 'Pilot code' %>
                   <%= f.text_field :stripe_coupon, class: 'form-control'%>
                 </div>
@@ -244,15 +244,15 @@
     })
   }
 
-  $(".pay").click(function(){
-    input = $(this).find('input');
-    if (plan != 'Startup'){
-      if(input.data('name') == 'Startup' && !input.is(":checked") )
-        $(".coupon_field").show();
-      else
-        $(".coupon_field").hide();
-    }
-  });
+  // $(".pay").click(function(){
+  //   input = $(this).find('input');
+  //   if (plan != 'Startup'){
+  //     if(input.data('name') == 'Startup' && !input.is(":checked") )
+  //       $(".coupon_field").show();
+  //     else
+  //       $(".coupon_field").hide();
+  //   }
+  // });
 
   var handler = StripeCheckout.configure({
     key: "<%= Rails.configuration.stripe[:publishable_key] %>",
