--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -87,7 +87,7 @@
         cursor: pointer;
         transition: all .25s;
         &:hover {
-          background: darken($grey, 10%)
+          background: darken($grey, 10%);
         }
       }
 
