--- a/app/views/user_mailer/activation_needed_email.text.erb
+++ b/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,9 +1,10 @@
-Welcome to example.com, <%= @user.email %>
-===============================================
+Welcome to Open[Fn], <%= @user.first_name %>.
 
-You have successfully signed up to example.com,
-your username is: <%= @user.email %>.
+Whether you've signed up to vote for new integrations or to start connecting your technologies right away, we're excited to have you. Please feel free to reach out if you've got any questions.
 
-To login to the site, just follow this link: <%= @url %>.
+Your username is: <%= @user.email %>.
 
-Thanks for joining and have a great day!
+To confirm your email address and activate your account, follow this link: <%= @url %>.
+
+Best,
+The Open[Fn] Team
