--- a/app/views/user_mailer/activation_success_email.text.erb
+++ b/app/views/user_mailer/activation_success_email.text.erb
@@ -1,9 +1,10 @@
-Congratz, <%= @user.email %>
-===============================================
+Congratulations, <%= @user.first_name %>.
 
-You have successfully activated your example.com account,
-your username is: <%= @user.email %>.
+You have successfully activated your Open[Fn] account.
 
-To login to the site, just follow this link: <%= @url %>.
+Your username is <%= @user.email %>.
 
-Thanks for joining and have a great day!
+To login to the site, follow this link: <%= @url %>.
+
+Best,
+The Open[Fn] Team
