--- a/app/views/user_mailer/reset_password_email.html.erb
+++ b/app/views/user_mailer/reset_password_email.html.erb
@@ -1,8 +1,8 @@
-Hi <%= @user.first_name %>,
+<%= @user.first_name %>,
 
-You have requested to reset your openfn.org password.
+You have requested to reset your Open[Fn] password.
 
 To set a new password, follow this link: <%= @url %>.
 
 Best,
-Openfn.org
+The Open[Fn] Team
