accordion turns blue when expanded f341_market

--- a/app/assets/stylesheets/marketplace.css.sass
+++ b/app/assets/stylesheets/marketplace.css.sass
@@ -152,8 +152,8 @@ $accordion-danger: #e8564c
         &:hover
           background: darken($accordion-base, 5%)
         &.active
-          color: $accent
-          background: $accordion-active
+          color: $accent !important
+          background: $accordion-active !important
     .panel-body
       background: $accordion-active
       padding: 5px 0
