details, thumbs, hearts on products

--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -115,8 +115,8 @@
       .vote-count {
         padding: 0.5em;
         position: absolute;
-        bottom: 0;
-        right: 9.5em;
+        bottom: 0.5em;
+        right: 5em;
       }
 
       #editor {
