Three col layout for xl displays f341_market

--- a/app/assets/stylesheets/marketplace.css.sass
+++ b/app/assets/stylesheets/marketplace.css.sass
@@ -1,6 +1,9 @@
 /* Layout
  ========================================================================== */
 
+.container-max-width
+  max-width: 1600px
+
 .container-fluid-padding
   padding: 0 60px !important
   @media screen and (max-width: 992px)
@@ -62,6 +65,7 @@
 .accordion-panel-toggle
   position: absolute
   width: 48px
+  height: 34px
   margin-left: -24px
   left: 50%
   padding: 8px 10px 5px 10px
