--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 @import "font-awesome";
 @import "bootstrap";
 @import "bootstrap_overrides";
+@import "bootstrap_xl";
 @import "breakpoint";
 @import "functions";
 @import "base";
