used content box and less padding instead of border box

--- a/app/assets/stylesheets/marketplace.css.sass
+++ b/app/assets/stylesheets/marketplace.css.sass
@@ -27,14 +27,14 @@
 
 .search-field
   input[type="text"]
-    box-sizing: border-box
+    box-sizing: content-box
     box-shadow: none
     border: none
     font-size: 15px
     font-weight: bold
     text-transform: uppercase
     border-radius: 2px
-    padding: 20px 16px
+    padding: 4px 16px
     border: solid 3px #fff
     transition: border 0.3s
   input[type="text"]:focus
