shrink right side link on products

--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -101,7 +101,7 @@
         right: 0;
         font-weight: bold;
         text-transform: uppercase;
-        padding: 1em 1.9em;
+        padding: 1em;
       }
 
       .vote-link {
@@ -116,7 +116,7 @@
         padding: 0.5em;
         position: absolute;
         bottom: 0.5em;
-        right: 5em;
+        right: 3em;
       }
 
       #editor {
