--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -18,6 +18,7 @@ $base: #3f5666;
 $light: #E7F0FA;
 $accent: #FFB632;
 $red-accent: #D84765;
+$lg-green: #82d29e;
 
 // These need to be removed, but log files, caches prevent removal.
 $off-white: red;      // deprecated
