--- a/app/views/odk_sf_legacy/mappings/show.html.erb
+++ b/app/views/odk_sf_legacy/mappings/show.html.erb
@@ -1,41 +1,44 @@
 <div class="ideas">
-  <header class="header-image">
-    <div class="headline">
-      <h1><i class="fa fa-plug"></i> open<strong>Mapper</strong></h1>
-      <h3>No code;<strong> seamless</strong> data integration at your fingertips.</h3>
-    </div>
-  </header>
   <div class="featurette dark">
     <hr class="light">
     <hr class="dark">
     <div class="container">
-    <ol class="breadcrumb">
-      <li><%= link_to "all maps", odk_sf_legacy_mappings_path %></li>
-      <li><i class="fa fa-arrow-circle-right"></i> <em><%= @mapping.name %></em></li>      
-      <li>
-        <% if @mapping.import %>
-          <%= link_to [@mapping, :submissions] do %>
-            submissions
-          <% end %>
-        <% else %>
-          no submissions yet
-        <% end %>
-      </li>
-    </ol>
-      <div class='pull-left'>
+    <div class="row">
+      <div class="col-md-4">
+        <ol class="breadcrumb">
+          <li><%= link_to "all maps", odk_sf_legacy_mappings_path %></li>
+          <li><i class="fa fa-arrow-circle-right"></i> <em><%= @mapping.name %></em></li>    
+          <li>
+            <% if @mapping.import %>
+              <%= link_to [@mapping, :submissions] do %>
+                submissions
+              <% end %>
+            <% else %>
+              no submissions yet
+            <% end %>
+          </li>
+        </ol>
+      </div>
+      <div class="col-md-4">
         <%= form_tag dispatch_surveys_odk_sf_legacy_mapping_path(@mapping), class: 'form-inline', role: 'form' do %>
           <div class="form-group">
-            <%= text_field_tag :only, params[:only], class: 'form-control', placeholder: 'No. of jobs' %>
+            <%= text_field_tag :only, params[:only], class: 'form-control', placeholder: 'No. of submissions' %>
+            <%= submit_tag "Manual Test", class: "import-button btn btn-default #{@mapping.enabled? ? '' : 'disabled'}" %>
           </div>
-          <%= submit_tag "Manual Test", class: "import-button btn btn-default #{@mapping.enabled? ? '' : 'disabled'}" %>
         <% end %>
       </div>
-      <div class='pull-right'>
-        <%= button_to "Destroy", @mapping, method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure you want to delete this map?' } %>
+      <div class="col-md-4">
         <%= link_to "View Cursor", '#', class: 'btn btn-default', data: {toggle: 'modal', target: '#cursor_modal'} if @mapping.import && @mapping.import.cursor %>
-        <%= button_to "Clear Cursor", [:clear_cursor, @mapping], class: 'btn btn-default', data: { confirm: 'Are you sure you want to clear the cursor? If the cursor is cleared, the worker will attempt to import all records in your source database, starting back at the beginning.' } %>
+        <%= link_to "Clear Cursor", [:clear_cursor, @mapping], class: 'btn btn-default', data: { confirm: 'Are you sure you want to clear the cursor? If the cursor is cleared, the worker will attempt to import all records in your source database, starting back at the beginning.' } %>
+        <%= link_to "Destroy", @mapping, method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure you want to delete this map?' } %>
         <%#= button_to "Clone", [:clone, @mapping], class: 'btn btn-success', confirm: 'Are you sure?' %>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h4>1. Your source form is "<%= @mapping.odk_form.name %>".</h4>
+      </div>
+    </div>
       <%= render "cursor_modal", mapping: @mapping if @mapping.import && @mapping.import.cursor %>
       <%= render "edit", mapping: @mapping %>
     </div>
