final brushing up on legacy mappings

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -140,3 +140,8 @@ input.destroy-field {
 .mapping-status-options {
   label { padding-right: 20px; }
 }
+
+.grey {
+  background-image: image-url("noise.png");
+  background-color: $nav;
+}
