--- a/app/views/odk_sf_legacy/mappings/show.html.erb
+++ b/app/views/odk_sf_legacy/mappings/show.html.erb
@@ -6,15 +6,15 @@
     <div class="row">
       <div class="col-md-4">
         <ol class="breadcrumb">
-          <li><%= link_to "all maps", odk_sf_legacy_mappings_path %></li>
+          <li><%= link_to "All mappings", odk_sf_legacy_mappings_path %></li>
           <li><i class="fa fa-arrow-circle-right"></i> <em><%= @mapping.name %></em></li>    
           <li>
             <% if @mapping.import %>
               <%= link_to [@mapping, :submissions] do %>
-                submissions
+                Submissions
               <% end %>
             <% else %>
-              no submissions yet
+              No submissions yet
             <% end %>
           </li>
         </ol>
