make submission ID grabbable in index

--- a/app/views/odk_sf_legacy/submissions/_submission.html.erb
+++ b/app/views/odk_sf_legacy/submissions/_submission.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><div class="btn btn-map-label disabled"><%= submission.uuid %></div></td>
+  <td><%= submission.uuid %><div class="btn btn-map-label disabled">&nbsp;</div></td>
   <td><%= submission.created_at %></td>
   <td><%= submission.state %></td>
   <td>
