--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,8 +13,16 @@
         <li>
           <a href="/#/marketplace">Marketplace</a>
         </li>
-        <li ng-controller="LoginController as loginCtrl">
-          <a ng-click="checkLogin('/mappings')">Integrations</a>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Integrations<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+                <a href="/#/v2">Prototype (v2)</a>
+              </li>
+              <li ng-controller="LoginController as loginCtrl">
+                <a ng-click="checkLogin('/mappings')">Integrations</a>
+              </li>        
+            </ul>
         </li>
         <li>
           <a href="https://medium.com/@openFn" target="_blank">Content</a>
