--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,28 +1,20 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-init="isCollapsed = true">
-  <div class="container">
-  <a class="navbar-logo" href="/"></a>
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" ng-click="isCollapsed = !isCollapsed">
-        <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
-      </button>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="navbar-collapse collapse" collapse="isCollapsed">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container hidden-sm hidden-xs">
+    <a class="navbar-logo" href="/"></a>
       <ul class="nav navbar-nav">
         <li>
           <a href="/#/marketplace">Marketplace</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Integrations <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li>
-                <a href="/#/v2">How it works</a>
-              </li>
-              <li ng-controller="LoginController as loginCtrl">
-                <a ng-click="checkLogin('/mappings')">Job manager</a>
-              </li>        
-            </ul>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <a href="/#/v2">How it works</a>
+            </li>
+            <li ng-controller="LoginController as loginCtrl">
+              <a ng-click="checkLogin('/mappings')">Job manager</a>
+            </li>        
+          </ul>
         </li>
         <li>
           <a href="https://medium.com/@openFn" target="_blank">Content</a>
@@ -52,7 +44,8 @@
                   Settings
                 <% end %>
               </li>
-              <li class="divider"></li>
+              <li class="divider">
+              </li>
               <li>
                 <%= link_to "/logout", method: :post do %>
                   Log out
@@ -61,7 +54,6 @@
             </ul>
           </li>
         <% end %>
-
         <% unless current_user %>
           <li ng-controller="LoginController as loginCtrl" class="row">
             <a ng-click="checkLogin()" >&nbsp;&nbsp;<i class="fa fa-lock"></i>&nbsp;&nbsp;</a>
@@ -74,7 +66,77 @@
         <% end %>
       </ul>
     </div>
+
+    <div class="container visible-sm visible-xs">
+    <a class="navbar-logo" href="/"></a>
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <% if current_user %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+                <%= link_to edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" do %>
+                  Settings
+                <% end %>
+              </li>
+              <li class="divider">
+              </li>
+              <li>
+                <%= link_to "/logout", method: :post do %>
+                  Log out
+                <% end %>
+              </li>
+            </ul>
+          </li>
+        <% end %>
+        <% unless current_user %>
+          <li ng-controller="LoginController as loginCtrl">
+            <a ng-click="checkLogin()" >Login <i class="fa fa-lock"></i></a>
+          </li>
+          <li>
+            <%= button_to "/signup", :class => "btn btn-grey", method: :get do %>
+              <strong>Sign up!</strong>
+            <% end %>
+          </li>
+        <% end %>
+            <li>
+              <a href="/#/marketplace">Marketplace</a>
+            </li>
+            <li>
+              <a href="/#/v2">What's Integration?</a>
+            </li>
+            <li ng-controller="LoginController as loginCtrl">
+              <a ng-click="checkLogin('/mappings')">Job manager</a>
+            </li>
+            <li>
+              <a href="https://medium.com/@openFn" target="_blank">Content</a>
+            </li>
+            <li>
+              <a href="/#/impact">Impact</a>
+            </li>
+            <li>
+              <a href="/#/our_team">Team</a>
+            </li>
+            <li>
+              <a href="/#/developers"><i class="fa fa-code"></i> Developers</a>
+            </li>
+            <% unless current_user %>
+              <li>
+                <a href="/#/pricing">Pricing</a>
+              </li>
+            <% end %>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+      </ul>
+    </div>
+  </nav>
 </nav>
+
 <%if current_user && current_user.client_admin?%>
   <%= render 'shared/invite_modal'%>
   <%= render 'shared/confirm_modal'%>
