changes to our team

--- a/app/assets/stylesheets/cases.css.scss
+++ b/app/assets/stylesheets/cases.css.scss
@@ -17,7 +17,7 @@
     background-image: image-url("noise.png");
   }
 
-  .team-member-pic {
+  .case-pic {
     width: 100%;
     max-width: 250px;
     height: auto;
