initial commit of bootstrap4

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,7 @@
 @import "odk_fields";
 @import "edit";
 @import "main";
-@import "angular-ui-tree";
+// @import "angular-ui-tree";
 @import "ng-ui-tree-overrides";
 @import "home";
 @import "product";
